[project]
name = "langgraph-fastapi-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
